# gerdarzh-backend

./: .gitignore  Dockerfile  README.md  manage.py  pyproject.toml  start-prod-server.sh
api_propernouns/: apps.py  dto.py  serializer.py  urls.py  views.py
api_semanticfield/: apps.py  serializer.py  urls.py  views.py
api_sessiongame/: apps.py  dto.py  urls.py  views.py
api_sources/: apps.py  dto.py  urls.py  views.py
api_wordstems/: apps.py  dto.py  serializer.py  urls.py  views.py
geriadur_api_django/: admin.py  asgi.py  constants.py  dto.py  models.py  serializer.py  settings.py  urls.py  utils.py  views.py  wsgi.py
geriadur_api_django/migrations/: 0001_initial.py  0002_alter_wordstem_options_delete_wordstemparent.py  0002_language_wordclass_wordstem_language_and_more.py  0003_alter_author_options_alter_littrans_options_and_more.py  0003_gender_wordstem_w_gender.py  0004_rename_date_publication_source_edition_date_and_more.py  0005_source_studied_language_source_writing_language.py  0006_user_choosen_language.py  0007_entityfield_translation.py  0008_country_place.py  0009_period.py  0010_rename_author_birthdate_author_birthdate_and_more.py  0011_wordstem_eng_translations_wordstem_fr_translations.py  0012_alter_quote_source_alter_source_studied_language_and_more.py  0013_littrans_name_br.py  0014_remove_language_abbreviation_language_code_and_more.py  0015_wordstemtranslation_alter_wordstem_eng_translations_and_more.py  0016_rename_fr_translations_wordstem_translations_and_more.py  0017_remove_wordstem_ref_words_fr_and_more.py  0018_language_is_focus.py
(+1 files in other folders)
